bad/assign_field_string_fcall_void.example_compiler_output
ERROR
[1mbad/assign_field_string_fcall_void.lat:9:12: [1;31merror: [0;1massigning to `string` from incompatible type `void`[m
	foo().fld = vfunc();
	          [1;32m^[m
